salesforce/11.1/modules/ROOT/pages/salesforce-connector-upgrade-migrate.adoc
= Upgrading and Migrating Salesforce Connector to 11.x - Mule 4
:page-aliases: connectors::salesforce/salesforce-connector-100-upgrade-migrate.adoc


Upgrade Anypoint Connector for Salesforce (Salesforce Connector) from version 10.x to version 11.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|10.x |11.1
|===

== Changes

=== 11.1

* Salesforce Connector now supports Salesforce API v62.0 and v63.0.

=== 11.0

This release contains the following changes:

* The *OAuth Client Credentials* connection type is added.
* The *Subscribe Channel Listener* source is removed. Use the *Replay Channel Listener* source instead by using the `ONLY_NEW` replay option.
* The *Subscribe Topic Listener* source is removed. Use the *Replay Topic Listener* source instead by using the `ONLY_NEW` replay option.
* The deprecated *Query Result Stream* operation is removed. Use both of these operations instead:
** The *Query Result List* operation to return a list of result IDs for a specific batch.
** The *Query Result Stream by Id* operation to return an InputStream with the query results for a specific result ID of a submitted BatchInfo.

== Upgrade Prerequisites

Before you perform the upgrade, you must:

. Create a backup of your files, data, and configuration in case you need to restore to the previous version.
. Install Salesforce Connector 11.x to replace the Salesforce operations that were previously included in Salesforce Connector 10.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Salesforce Connector v10.x to Salesforce Connector v11.x:

. In Anypoint Studio, create a Mule project.
. In the Mule Palette view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `Salesforce` in the search field.
. In the *Available modules* section, select *Salesforce Connector - Mule 4* and click *Add*.
. Click *Finish*.
. Verify that the `salesforce-connector` dependency version is `11.x.x` in the `pom.xml` file, where `x.x` is the minor release and patch version number. For example, if you are upgrading to v11.0, the dependency version in the `pom.xml` file should be `11.0.0`.

Studio upgrades the connector automatically.


== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of Salesforce Connector, change the `salesforce-connector` dependency version in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
