salesforce/12.0/modules/ROOT/pages/salesforce-connector-upgrade-migrate.adoc
= Upgrading and Migrating Salesforce Connector to 12.x 
:page-aliases: connectors::salesforce/salesforce-connector-100-upgrade-migrate.adoc


Upgrade Anypoint Connector for Salesforce (Salesforce Connector) from version 11.x to version 12.x.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|11.x |12.x
|===

== Changes

=== 12.0

* This connector is now compatible with Java 17 only.
* The *OAuth Username Password* connection type is removed because Salesforce is retiring the OAuth 2.0 Username-Password flow. Applications that use this connection type fail to deploy on 12.0.0. Migrate to another supported connection type, such as xref:connectors::salesforce/salesforce-connector-reference.adoc#sfdc-config_oauth-client-credentials[OAuth Client Credentials] or xref:connectors::salesforce/salesforce-connector-reference.adoc#sfdc-config_jwt[OAuth JWT].
* The new *Query Time Buffer (Seconds)* field enables you to configure a polling time buffer (from `0` to `120` seconds) for source listeners to prevent missing records committed between polls for the *On New Object*, *On Modified Object*, and *On Deleted Object* sources. 
The query buffer time for the *On Modified Object* source now defaults to `0` seconds, instead of the former hardcoded default of `2` seconds. Applications that rely on the previous 2-second buffer must explicitly configure this value in the *Query Time Buffer (Seconds)* field.
* The *On Modified Object* source now honors the read timeout configured in the connector configuration for internal `DescribeSObjects` calls. Previously, these calls defaulted to an infinite timeout (`readTimeout=0`), which caused connections to hang under certain network conditions.
* These libraries are upgraded to address reported security vulnerabilities:

** The Apache CXF library is upgraded to version 4.1.7.
** The `jackson-core` and `jackson-databind` libraries are upgraded to version 2.21.5.
** The `woodstox-core` library is upgraded to version 6.7.0.
** The `httpclient` library is upgraded to version 4.5.14.
** The `commons-codec` library is upgraded to version 1.22.0.
** The `opencsv` library is upgraded to version 5.12.0.
** The `jackson-annotations` library is upgraded to version 2.21.
** The `gson` library is upgraded to version 2.12.0.
** The `jaxws-rt` library is upgraded to version 2.3.7.
** The `jetty` library is upgraded to version 12.1.10.
** The `cometd-java` library is upgraded to version 8.0.7.

=== 11.5

* Salesforce Connector now supports Salesforce API v67.0.

=== 11.4

* Salesforce Connector now supports Salesforce API v66.0.

=== 11.3

* Salesforce Connector now supports Salesforce API v65.0.

=== 11.2

* Salesforce Connector now supports Salesforce API v64.0.

=== 11.1

* Salesforce Connector now supports Salesforce API v62.0 and v63.0.

=== 11.0

This release contains the following changes:

* The *OAuth Client Credentials* connection type is added.
* The *Subscribe Channel Listener* source is removed. Use the *Replay Channel Listener* source instead by using the `ONLY_NEW` replay option.
* The *Subscribe Topic Listener* source is removed. Use the *Replay Topic Listener* source instead by using the `ONLY_NEW` replay option.
* The deprecated *Query Result Stream* operation is removed. Use both of these operations instead:
** The *Query Result List* operation to return a list of result IDs for a specific batch.
** The *Query Result Stream by Id* operation to return an InputStream with the query results for a specific result ID of a submitted BatchInfo.

== Upgrade Prerequisites

Before you perform the upgrade, you must:

. Create a backup of your files, data, and configuration in case you need to restore to the previous version.
. Ensure that your environment meets the version 12.x requirements, including Java 17, Mule runtime 4.9.0 or later, and Anypoint Studio 7.21 or later.
. If your app uses the *OAuth Username Password* connection type, migrate to the *OAuth Client Credentials*, *OAuth JWT*, or *OAuth 2.0* connection type, because the *OAuth Username Password* connection type is removed in version 12.x.
. Install Salesforce Connector 12.x to replace the Salesforce operations that were previously included in Salesforce Connector 11.x.

== Upgrade Steps

Follow these steps to perform the upgrade from Salesforce Connector v11.x to Salesforce Connector v12.x:

. In Anypoint Studio, create a Mule project.
. In the Mule Palette view, click *Search in Exchange*.
. In the *Add Dependencies to Project* window, enter `Salesforce` in the search field.
. In the *Available modules* section, select *Salesforce Connector - Mule 4* and click *Add*.
. Click *Finish*.
. Verify that the `salesforce-connector` dependency version is `12.x.x` in the `pom.xml` file, where `x.x` is the minor release and patch version number. For example, if you are upgrading to v12.0, the dependency version in the `pom.xml` file should be `12.0.0`.

Studio upgrades the connector automatically.


== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Check the project `pom.xml` file and verify that there are no problems.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Studio.

== Revert the Upgrade

If it is necessary to revert to the previous version of Salesforce Connector, change the `salesforce-connector` dependency version in the project's `pom.xml` file to the previous version.

You must update the project's `pom.xml` file in Anypoint Studio.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.salesforce.com[Salesforce Help]
